Move 'Our Dogs' Main Content to index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
               <a class="nav-link" href="get-involved.html">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a class="btn custom-button-filled" href="adoption-form.html">Adopt Now!</a>
+              <a class="btn custom-button-filled" href="adoption-form.html"
+                >Adopt Now!</a
+              >
             </li>
           </ul>
         </div>
@@ -142,6 +144,326 @@
       </div>
     </div>
     <hr class="m-2 p-1" />
+
+    <!-- Our Dogs Seciton -->
+
+    <section id="newest-arrivals" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Newest Arrivals
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Tilly
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Small in size, big on sass. Loves belly rubs, garden zoomies,
+                  and judging your snack choices. Apply now—she’s watching.
+                </p>
+                <p><em>Age:</em> 6 weeks</p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Frankie
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Snorts, snores, and steals hearts. A professional couch potato
+                  with elite cuddling skills. Must love naps and be
+                  food-motivated.
+                </p>
+                <p><em>Age:</em> 8 weeks</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Sunny
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Golden by name, golden by nature. Loyal, goofy, and always up
+                  for a game of fetch—or five. Bring snacks.
+                </p>
+                <p><em>Age:</em> 6 weeks</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Rocco
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Wiggles like a worm, plays like a champ. Loves humans, hates
+                  boredom. Will box your heart into submission. Gloves optional.
+                </p>
+                <p><em>Age:</em> 5 weeks</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
+    <!-- Our Small Dogs -->
+    <section id="smaller-dogs" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Our Smaller Dogs
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Biscuit
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Built like a loaf, runs like a rocket. Royal attitude, wiggly
+                  bum, and ears that hear snack bags from space.
+                </p>
+                <p><em>Age:</em> 3 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Duchess
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Part runway model, part shadow. Loves brushing, drama, and
+                  being the star. Floofy, fabulous, and not afraid to bark
+                  orders.
+                </p>
+                <p><em>Age:</em> 7 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Milo
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Low-maintenance coat, high-maintenance sass. Compact cuddle
+                  unit with speed, style, and opinions. Will accept treats as
+                  tribute for affection.
+                </p>
+                <p><em>Age:</em> 2 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Hamish
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Serious face, silly soul. Loves digging, sniffing, and
+                  stealing socks. Blonde by nature, bossy by choice. Terrier
+                  vibes, heart of gold.
+                </p>
+                <p><em>Age:</em> 8 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
+    <!-- Larger Dogs -->
+    <section id="larger-dogs" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Larger Dogs
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Scooby
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Endless energy, chocolatey charm. Loves water, muddy paws, and
+                  making new best friends. Will trade kisses for biscuits—no
+                  questions asked.
+                </p>
+                <p><em>Age:</em> 6 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Skye
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Smart, swift, and suspicious of squirrels. Herds
+                  everything—kids, cats, conversations. Needs love, space, and
+                  maybe a hobby. Outwits most humans.
+                </p>
+                <p><em>Age:</em> 4 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Ziggy
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Bouncy, boxy, and built for fun. Wiggles like a noodle, snores
+                  like a bear. Will love you very enthusiastically.
+                </p>
+                <p><em>Age:</em> 5 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Nala
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Sunshine in dog form. Loyal, licky, and always carrying
+                  something—usually a stick, sometimes your shoe. Just wants to
+                  love you.
+                </p>
+                <p><em>Age:</em> 8 years old</p>
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Success Story Carousel -->
 
@@ -319,24 +641,24 @@
             yourself. Don’t be shy — stop in and say hi!
           </p>
           <div class="col-xl-5">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col"></th>
-                <th scope="col">Mon-Fri</th>
-                <th scope="col">Saturday</th>
-                <th scope="col">Sunday</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Opening Times</th>
-                <td>9am-5pm</td>
-                <td>8am-8pm</td>
-                <td>CLOSED</td>
-              </tr>
-            </tbody>
-          </table>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col"></th>
+                  <th scope="col">Mon-Fri</th>
+                  <th scope="col">Saturday</th>
+                  <th scope="col">Sunday</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Opening Times</th>
+                  <td>9am-5pm</td>
+                  <td>8am-8pm</td>
+                  <td>CLOSED</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
         <div id="location" class="row">
