Move 'Adopt' Main Scetoin to index.html

--- a/index.html
+++ b/index.html
@@ -625,6 +625,132 @@
     </section>
     <hr class="m-2 p-1" />
 
+
+    <!-- Adopt Section -->
+    <!-- Adoption Cards -->
+
+    <section id="adoption-process" class="conatiner">
+      <div class="row mb-4">
+        <div class="col-12 mb-4">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Adoption in 4 Easy Steps
+          </h3>
+        </div>
+        <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card-header h4 bg-card-primary card-text-title">
+              1. Fill Out Our Online Form
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <p class="card-text">
+                Please share preferences with us as this helps us match you with
+                the right dog!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card-header h4 bg-card-primary card-text-title">
+              2. Meet Your Match
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                We’ll be in touch to arrange a visit with dogs that suit your
+                home, family, and energy level.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card-header h4 bg-card-primary card-text-title">
+              3. Home Check & Approval
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                A quick, friendly home check ensures it’s a safe, happy
+                environment for your future furry friend.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card-header h4 bg-card-primary card-text-title">
+              4. Take Them Home
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                Once approved, just like that, your new best friend comes home!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Adoptoin Form -->
+
+    <section id="adoption-form" class="container">
+      <div class="row">
+      <div class="col-12 mb-4">
+        <h3
+          class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow">
+          Let's Get Started!
+        </h3>
+      </div>
+      <form class="row g-3 m-auto">
+        <div class="col-md-6">
+          <label for="full-name" class="form-label">Full Name</label>
+          <input type="text" class="form-control" id="full-name" />
+        </div>
+        <div class="col-md-6">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" />
+        </div>
+        <div class="col-md-6">
+          <label for="phone-number" class="form-label">Phone Number</label>
+          <input type="tel" class="form-control" id="phone-number" />
+        </div>
+        <div class="col-md-6">
+          <label for="d-o-b" class="form-label">Date of Birth</label>
+          <input type="date" class="form-control" id="d-o-b" />
+        </div>
+        <div class="col-md-6">
+          <label for="breed-preference" class="form-label"
+            >Breed Preference</label
+          >
+          <input class="form-control" list="breeds" id="breed" name="breed" />
+          <datalist id="breeds">
+            <option value="Labrador Retriever"></option>
+            <option value="German Shepherd"></option>
+            <option value="Golden Retriever"></option>
+            <option value="French Bulldog"></option>
+            <option value="Bulldog"></option>
+            <option value="Poodle"></option>
+            <option value="Beagle"></option>
+            <option value="Rottweiler"></option>
+            <option value="Dachshund"></option>
+            <option value="Yorkshire Terrier"></option>
+          </datalist>
+        </div>
+        <div class="col-md-6">
+          <label for="message" class="form-label">Want to share anything with us?</label>
+          <input type="text-area" class="form-control" id="message" />
+        </div>
+
+      
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </div>
+      </form>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="container-fluid">
       <div class="container justify-content-center">
