--- a/index.html
+++ b/index.html
@@ -147,102 +147,134 @@
 
     <!-- Our Dogs Seciton -->
 
-    <section id="newest-arrivals" class="container justify-content-center">
-      <div class="row">
-        <div class="col-12">
-          <h3
-            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
-          >
-            Newest Arrivals
-          </h3>
-        </div>
+    <section id="newest-arrivals">
+      <div class="containerfluid"></div>
+      <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-6 col-xxl-3">
-            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
-              <img
-                src="assets/images/new-arrival-1.webp"
-                class="card-img-top"
-                alt="picture of a puppy"
-              />
-              <div class="card-header h4 bg-card-primary card-text-title">
-                Tilly
+          <div class="col-12">
+            <div class="row">
+              <div class="col-2 col-xl-4"></div>
+              <div class="col-8 col-xl-4">
+                <h3
+                  class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+                >
+                  Newest Arrivals
+                </h3>
               </div>
-              <div class="card-body">
-                <p class="card-text">
-                  Small in size, big on sass. Loves belly rubs, garden zoomies,
-                  and judging your snack choices. Apply now—she’s watching.
-                </p>
-                <p><em>Age:</em> 6 weeks</p>
+              <div class="col-2 col-xl-4"></div>
+            </div>
+          </div>
 
-                <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+          <div class="row justify-content-center">
+            <div class="col-md-6 col-xxl-3">
+              <div
+                class="card dog-card shadow m-auto my-3"
+                style="width: 18rem"
+              >
+                <img
+                  src="assets/images/new-arrival-1.webp"
+                  class="card-img-top"
+                  alt="picture of a puppy"
+                />
+                <div class="card-header h4 bg-card-primary card-text-title">
+                  Tilly
+                </div>
+                <div class="card-body">
+                  <p class="card-text">
+                    Small in size, big on sass. Loves belly rubs, garden
+                    zoomies, and judging your snack choices. Apply now—she’s
+                    watching.
+                  </p>
+                  <p><em>Age:</em> 6 weeks</p>
+
+                  <div class="text-end">
+                    <a href="#" class="btn custom-button-filled"
+                      >Adopt Me Now!</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-xxl-3">
-            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
-              <img
-                src="assets/images/new-arrival-2.webp"
-                class="card-img-top"
-                alt="picture of a puppy"
-              />
-              <div class="card-header h4 bg-card-primary card-text-title">
-                Frankie
-              </div>
-              <div class="card-body">
-                <p class="card-text">
-                  Snorts, snores, and steals hearts. A professional couch potato
-                  with elite cuddling skills. Must love naps and be
-                  food-motivated.
-                </p>
-                <p><em>Age:</em> 8 weeks</p>
-                <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+            <div class="col-md-6 col-xxl-3">
+              <div
+                class="card dog-card shadow m-auto my-3"
+                style="width: 18rem"
+              >
+                <img
+                  src="assets/images/new-arrival-2.webp"
+                  class="card-img-top"
+                  alt="picture of a puppy"
+                />
+                <div class="card-header h4 bg-card-primary card-text-title">
+                  Frankie
+                </div>
+                <div class="card-body">
+                  <p class="card-text">
+                    Snorts, snores, and steals hearts. A professional couch
+                    potato with elite cuddling skills. Must love naps and be
+                    food-motivated.
+                  </p>
+                  <p><em>Age:</em> 8 weeks</p>
+                  <div class="text-end">
+                    <a href="#" class="btn custom-button-filled"
+                      >Adopt Me Now!</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-xxl-3">
-            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
-              <img
-                src="assets/images/new-arrival-3.webp"
-                class="card-img-top"
-                alt="picture of a puppy"
-              />
-              <div class="card-header h4 bg-card-primary card-text-title">
-                Sunny
-              </div>
-              <div class="card-body">
-                <p class="card-text">
-                  Golden by name, golden by nature. Loyal, goofy, and always up
-                  for a game of fetch—or five. Bring snacks.
-                </p>
-                <p><em>Age:</em> 6 weeks</p>
-                <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+            <div class="col-md-6 col-xxl-3">
+              <div
+                class="card dog-card shadow m-auto my-3"
+                style="width: 18rem"
+              >
+                <img
+                  src="assets/images/new-arrival-3.webp"
+                  class="card-img-top"
+                  alt="picture of a puppy"
+                />
+                <div class="card-header h4 bg-card-primary card-text-title">
+                  Sunny
+                </div>
+                <div class="card-body">
+                  <p class="card-text">
+                    Golden by name, golden by nature. Loyal, goofy, and always
+                    up for a game of fetch—or five. Bring snacks.
+                  </p>
+                  <p><em>Age:</em> 6 weeks</p>
+                  <div class="text-end">
+                    <a href="#" class="btn custom-button-filled"
+                      >Adopt Me Now!</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-xxl-3">
-            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
-              <img
-                src="assets/images/new-arrival-4.webp"
-                class="card-img-top"
-                alt="picture of a puppy"
-              />
-              <div class="card-header h4 bg-card-primary card-text-title">
-                Rocco
-              </div>
-              <div class="card-body">
-                <p class="card-text">
-                  Wiggles like a worm, plays like a champ. Loves humans, hates
-                  boredom. Will box your heart into submission. Gloves optional.
-                </p>
-                <p><em>Age:</em> 5 weeks</p>
-                <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+            <div class="col-md-6 col-xxl-3">
+              <div
+                class="card dog-card shadow m-auto my-3"
+                style="width: 18rem"
+              >
+                <img
+                  src="assets/images/new-arrival-4.webp"
+                  class="card-img-top"
+                  alt="picture of a puppy"
+                />
+                <div class="card-header h4 bg-card-primary card-text-title">
+                  Rocco
+                </div>
+                <div class="card-body">
+                  <p class="card-text">
+                    Wiggles like a worm, plays like a champ. Loves humans, hates
+                    boredom. Will box your heart into submission. Gloves
+                    optional.
+                  </p>
+                  <p><em>Age:</em> 5 weeks</p>
+                  <div class="text-end">
+                    <a href="#" class="btn custom-button-filled"
+                      >Adopt Me Now!</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -625,7 +657,6 @@
     </section>
     <hr class="m-2 p-1" />
 
-
     <!-- Adopt Section -->
     <!-- Adoption Cards -->
 
@@ -697,57 +728,59 @@
 
     <section id="adoption-form" class="container">
       <div class="row">
-      <div class="col-12 mb-4">
-        <h3
-          class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow">
-          Let's Get Started!
-        </h3>
-      </div>
-      <form class="row g-3 m-auto">
-        <div class="col-md-6">
-          <label for="full-name" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="full-name" />
-        </div>
-        <div class="col-md-6">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" />
-        </div>
-        <div class="col-md-6">
-          <label for="phone-number" class="form-label">Phone Number</label>
-          <input type="tel" class="form-control" id="phone-number" />
-        </div>
-        <div class="col-md-6">
-          <label for="d-o-b" class="form-label">Date of Birth</label>
-          <input type="date" class="form-control" id="d-o-b" />
-        </div>
-        <div class="col-md-6">
-          <label for="breed-preference" class="form-label"
-            >Breed Preference</label
+        <div class="col-12 mb-4">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
           >
-          <input class="form-control" list="breeds" id="breed" name="breed" />
-          <datalist id="breeds">
-            <option value="Labrador Retriever"></option>
-            <option value="German Shepherd"></option>
-            <option value="Golden Retriever"></option>
-            <option value="French Bulldog"></option>
-            <option value="Bulldog"></option>
-            <option value="Poodle"></option>
-            <option value="Beagle"></option>
-            <option value="Rottweiler"></option>
-            <option value="Dachshund"></option>
-            <option value="Yorkshire Terrier"></option>
-          </datalist>
+            Let's Get Started!
+          </h3>
         </div>
-        <div class="col-md-6">
-          <label for="message" class="form-label">Want to share anything with us?</label>
-          <input type="text-area" class="form-control" id="message" />
-        </div>
+        <form class="row g-3 m-auto">
+          <div class="col-md-6">
+            <label for="full-name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="full-name" />
+          </div>
+          <div class="col-md-6">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" />
+          </div>
+          <div class="col-md-6">
+            <label for="phone-number" class="form-label">Phone Number</label>
+            <input type="tel" class="form-control" id="phone-number" />
+          </div>
+          <div class="col-md-6">
+            <label for="d-o-b" class="form-label">Date of Birth</label>
+            <input type="date" class="form-control" id="d-o-b" />
+          </div>
+          <div class="col-md-6">
+            <label for="breed-preference" class="form-label"
+              >Breed Preference</label
+            >
+            <input class="form-control" list="breeds" id="breed" name="breed" />
+            <datalist id="breeds">
+              <option value="Labrador Retriever"></option>
+              <option value="German Shepherd"></option>
+              <option value="Golden Retriever"></option>
+              <option value="French Bulldog"></option>
+              <option value="Bulldog"></option>
+              <option value="Poodle"></option>
+              <option value="Beagle"></option>
+              <option value="Rottweiler"></option>
+              <option value="Dachshund"></option>
+              <option value="Yorkshire Terrier"></option>
+            </datalist>
+          </div>
+          <div class="col-md-6">
+            <label for="message" class="form-label"
+              >Want to share anything with us?</label
+            >
+            <input type="text-area" class="form-control" id="message" />
+          </div>
 
-      
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Sign in</button>
-        </div>
-      </form>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </div>
+        </form>
       </div>
     </section>
 
