Add Home Page Intro for 'Our Dogs'

--- a/index.html
+++ b/index.html
@@ -148,7 +148,41 @@
     <!-- Our Dogs Seciton -->
 
     <section id="newest-arrivals">
-      <div class="containerfluid"></div>
+      <div class="containerfluid bg-card-primary py-4 my-4">
+        <div class="row">
+          <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <div class="row">
+                  <div class="col-2 col-xl-4"></div>
+                  <div class="col-8 col-xl-4">
+                    <h3
+                      class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+                    >
+                      Introducing Our Pack...
+                    </h3>
+                  </div>
+                  <div class="col-2 col-xl-4"></div>
+                </div>
+              </div>
+              <div class="col-1 col-xl-2"></div>
+              <div class="col-10 col-xl-18">
+                <p class="text-center mt-2 lead w-text">
+                  We're so excited to introduce you to our wonderful family of
+                  dogs! Each one has their own story, personality, and charm —
+                  and we truly believe there's a perfect match for everyone.
+                  Whether you're looking for a playful pup, a gentle senior, or
+                  a loyal companion, we’re confident your new best friend is
+                  waiting right here. We can't wait for you to meet them and
+                  start your very own tail of two hearts.
+                </p>
+              </div>
+              <div class="col-1 col-xl-2"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12">
@@ -502,11 +536,27 @@
     <section id="success-stories" class="container justify-content-center my-3">
       <div class="row">
         <div class="col-12">
-          <h3
-            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
-          >
-            Success Stories!
-          </h3>
+          <div class="containerfluid bg-card-primary py-4 my-4">
+            <div class="row">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="row">
+                      <div class="col-2 col-xl-4"></div>
+                      <div class="col-8 col-xl-4">
+                        <h3
+                          class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+                        >
+                          Introducing Our Pack...
+                        </h3>
+                      </div>
+                      <div class="col-2 col-xl-4"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Carousel Start -->
           <div id="carousel-success-stories" class="carousel slide my-3 shadow">
             <div class="carousel-indicators">
