--- a/index.html
+++ b/index.html
@@ -533,174 +533,180 @@
 
     <!-- Success Story Carousel -->
 
-    <section id="success-stories" class="container justify-content-center my-3">
-      <div class="row">
-        <div class="col-12">
-          <div class="containerfluid bg-card-primary py-4 my-4">
+    <section id="success-stories">
+      <div class="containerfluid bg-card-primary py-4 my-4">
+        <div class="row">
+          <div class="container">
             <div class="row">
-              <div class="container">
+              <div class="col-12">
                 <div class="row">
-                  <div class="col-12">
-                    <div class="row">
-                      <div class="col-2 col-xl-4"></div>
-                      <div class="col-8 col-xl-4">
-                        <h3
-                          class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
-                        >
-                          Introducing Our Pack...
-                        </h3>
-                      </div>
-                      <div class="col-2 col-xl-4"></div>
-                    </div>
+                  <div class="col-2 col-xl-4"></div>
+                  <div class="col-8 col-xl-4">
+                    <h3
+                      class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+                    >
+                      Success Stories!
+                    </h3>
                   </div>
+                  <div class="col-2 col-xl-4"></div>
                 </div>
               </div>
+              
             </div>
           </div>
-          <!-- Carousel Start -->
-          <div id="carousel-success-stories" class="carousel slide my-3 shadow">
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item position-relative active">
-                <img
-                  src="assets/images/success-story-1.webp"
-                  class="d-block w-100 max-height"
-                  alt="A happy woman with a golden retriever dog"
-                />
-                <div
-                  class="position-absolute bottom-0 start-50 translate-middle"
-                  style="z-index: 10"
-                >
-                  <div class="card">
-                    <div class="card-body">
-                      <figure>
-                        <blockquote class="blockquote">
-                          <p>
-                            "Adopting Bella was the best decision we’ve ever
-                            made — she fits right into our family. The process
-                            was so easy and transparent, we knew exactly what to
-                            expect at every step."
-                          </p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                          Sue and Bella
-                          <cite title="Source Title"
-                            >First Time Dog Apoter</cite
-                          >
-                        </figcaption>
-                      </figure>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item position-relative">
-                <img
-                  src="assets/images/success-story-2.webp"
-                  class="d-block w-100 max-height"
-                  alt="A happy woman with a golden retriever dog"
-                />
-                <div
-                  class="position-absolute bottom-0 start-50 translate-middle"
-                  style="z-index: 10"
-                >
-                  <div class="card">
-                    <div class="card-body">
-                      <figure>
-                        <blockquote class="blockquote">
-                          <p>
-                            "We couldn’t be happier with Max! Everything from
-                            the first inquiry to bringing him home was simple,
-                            clear, and totally stress-free."
-                          </p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                          Meryl, Dean and Max
-                          <cite title="Source Title"
-                            >Long time dog lovers and adopters</cite
-                          >
-                        </figcaption>
-                      </figure>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item position-relative">
-                <img
-                  src="assets/images/success-story-3.webp"
-                  class="d-block w-100 max-height"
-                  alt="A happy woman with a golden retriever dog"
-                />
-                <div
-                  class="position-absolute bottom-0 start-50 translate-middle"
-                  style="z-index: 10"
-                >
-                  <div class="card">
-                    <div class="card-body">
-                      <figure>
-                        <blockquote class="blockquote">
-                          <p>
-                            "Luna has brought so much joy into our lives. The
-                            adoption was incredibly straightforward — quick,
-                            honest, and handled with so much care."
-                          </p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                          Kristie and Luna
-                          <cite title="Source Title"
-                            >First time dog adopter</cite
-                          >
-                        </figcaption>
-                      </figure>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev"
+        </div>
+      </div>
+      <div class="container justify-content-center my-3">
+        <div class="row">
+          <div class="col-12">
+            <!-- Carousel Start -->
+            <div
+              id="carousel-success-stories"
+              class="carousel slide my-3 shadow"
             >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="0"
+                  class="active"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                ></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item position-relative active">
+                  <img
+                    src="assets/images/success-story-1.webp"
+                    class="d-block w-100 max-height"
+                    alt="A happy woman with a golden retriever dog"
+                  />
+                  <div
+                    class="position-absolute bottom-0 start-50 translate-middle"
+                    style="z-index: 10"
+                  >
+                    <div class="card">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "Adopting Bella was the best decision we’ve ever
+                              made — she fits right into our family. The process
+                              was so easy and transparent, we knew exactly what
+                              to expect at every step."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Sue and Bella
+                            <cite title="Source Title"
+                              >First Time Dog Apoter</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item position-relative">
+                  <img
+                    src="assets/images/success-story-2.webp"
+                    class="d-block w-100 max-height"
+                    alt="A happy woman with a golden retriever dog"
+                  />
+                  <div
+                    class="position-absolute bottom-0 start-50 translate-middle"
+                    style="z-index: 10"
+                  >
+                    <div class="card">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "We couldn’t be happier with Max! Everything from
+                              the first inquiry to bringing him home was simple,
+                              clear, and totally stress-free."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Meryl, Dean and Max
+                            <cite title="Source Title"
+                              >Long time dog lovers and adopters</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item position-relative">
+                  <img
+                    src="assets/images/success-story-3.webp"
+                    class="d-block w-100 max-height"
+                    alt="A happy woman with a golden retriever dog"
+                  />
+                  <div
+                    class="position-absolute bottom-0 start-50 translate-middle"
+                    style="z-index: 10"
+                  >
+                    <div class="card">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "Luna has brought so much joy into our lives. The
+                              adoption was incredibly straightforward — quick,
+                              honest, and handled with so much care."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Kristie and Luna
+                            <cite title="Source Title"
+                              >First time dog adopter</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -710,7 +716,10 @@
     <!-- Adopt Section -->
     <!-- Adoption Cards -->
 
-    <section id="adoption-process" class="conatiner">
+    <section id="adoption-process">
+      
+
+      <div class="container">
       <div class="row mb-4">
         <div class="col-12 mb-4">
           <h3
@@ -771,6 +780,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
