Add Title and Intro for 'Adoption Process'

--- a/index.html
+++ b/index.html
@@ -551,7 +551,6 @@
                   <div class="col-2 col-xl-4"></div>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
@@ -717,70 +716,102 @@
     <!-- Adoption Cards -->
 
     <section id="adoption-process">
-      
-
-      <div class="container">
-      <div class="row mb-4">
-        <div class="col-12 mb-4">
-          <h3
-            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
-          >
-            Adoption in 4 Easy Steps
-          </h3>
-        </div>
-        <div class="col-md-6 col-xxl-3 mb-2">
-          <div class="card m-auto shadow" style="width: 20rem">
-            <div class="card-header h4 bg-card-primary card-text-title">
-              1. Fill Out Our Online Form
-            </div>
-            <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text">
-                Please share preferences with us as this helps us match you with
-                the right dog!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-xxl-3 mb-2">
-          <div class="card m-auto shadow" style="width: 20rem">
-            <div class="card-header h4 bg-card-primary card-text-title">
-              2. Meet Your Match
-            </div>
-            <div class="card-body">
-              <p class="card-text">
-                We’ll be in touch to arrange a visit with dogs that suit your
-                home, family, and energy level.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-xxl-3 mb-2">
-          <div class="card m-auto shadow" style="width: 20rem">
-            <div class="card-header h4 bg-card-primary card-text-title">
-              3. Home Check & Approval
-            </div>
-            <div class="card-body">
-              <p class="card-text">
-                A quick, friendly home check ensures it’s a safe, happy
-                environment for your future furry friend.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-xxl-3 mb-2">
-          <div class="card m-auto shadow" style="width: 20rem">
-            <div class="card-header h4 bg-card-primary card-text-title">
-              4. Take Them Home
-            </div>
-            <div class="card-body">
-              <p class="card-text">
-                Once approved, just like that, your new best friend comes home!
-              </p>
+      <div class="containerfluid bg-card-primary py-4 my-4">
+        <div class="row">
+          <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <div class="row">
+                  <div class="col-2 col-xl-4"></div>
+                  <div class="col-8 col-xl-4">
+                    <h3
+                      class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+                    >
+                      Adoption has Never been Easier!
+                    </h3>
+                  </div>
+                  <div class="col-2 col-xl-4"></div>
+                </div>
+              </div>
+              <div class="col-1 col-xl-2"></div>
+              <div class="col-10 col-xl-18">
+                <p class="text-center mt-2 lead w-text">
+                  Adopting a dog has never been easier. With simple online
+                  listings, helpful staff, and a quick, caring process, finding
+                  your perfect furry friend is just a few steps away. Whether
+                  you're a seasoned pet owner or a first-timer, your new best
+                  friend could be waiting for you today.
+                </p>
+              </div>
+              <div class="col-1 col-xl-2"></div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-12 mb-4">
+            <h3
+              class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+            >
+              Adoption in 4 Easy Steps
+            </h3>
+          </div>
+          <div class="col-md-6 col-xxl-3 mb-2">
+            <div class="card m-auto shadow" style="width: 20rem">
+              <div class="card-header h4 bg-card-primary card-text-title">
+                1. Fill Out Our Online Form
+              </div>
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text">
+                  Please share preferences with us as this helps us match you
+                  with the right dog!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3 mb-2">
+            <div class="card m-auto shadow" style="width: 20rem">
+              <div class="card-header h4 bg-card-primary card-text-title">
+                2. Meet Your Match
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  We’ll be in touch to arrange a visit with dogs that suit your
+                  home, family, and energy level.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3 mb-2">
+            <div class="card m-auto shadow" style="width: 20rem">
+              <div class="card-header h4 bg-card-primary card-text-title">
+                3. Home Check & Approval
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  A quick, friendly home check ensures it’s a safe, happy
+                  environment for your future furry friend.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-3 mb-2">
+            <div class="card m-auto shadow" style="width: 20rem">
+              <div class="card-header h4 bg-card-primary card-text-title">
+                4. Take Them Home
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Once approved, just like that, your new best friend comes
+                  home!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
