Update Navigation for New Layout

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="our-dogs.html">Ours Stars</a>
+              <a class="nav-link" href="#our-dogs">Ours Stars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="get-involved.html">Get Involved</a>
+              <a class="nav-link" href="#">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a class="btn custom-button-filled" href="adoption-form.html"
+              <a class="btn custom-button-filled" href="#adoption-process"
                 >Adopt Now!</a
               >
             </li>
@@ -146,8 +146,11 @@
     <hr class="m-2 p-1" />
 
     <!-- Our Dogs Seciton -->
+    <section id="our-dogs">
 
-    <section id="newest-arrivals">
+    <!-- Newest arrivals -->
+
+    <div id="newest-arrivals">
       <div class="containerfluid bg-card-primary py-4 my-4">
         <div class="row">
           <div class="container">
@@ -166,7 +169,7 @@
                 </div>
               </div>
               <div class="col-1 col-xl-2"></div>
-              <div class="col-10 col-xl-18">
+              <div class="col-10 col-xl-8">
                 <p class="text-center mt-2 lead w-text">
                   We're so excited to introduce you to our wonderful family of
                   dogs! Each one has their own story, personality, and charm —
@@ -222,7 +225,7 @@
                   <p><em>Age:</em> 6 weeks</p>
 
                   <div class="text-end">
-                    <a href="#" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -250,7 +253,7 @@
                   </p>
                   <p><em>Age:</em> 8 weeks</p>
                   <div class="text-end">
-                    <a href="#" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -277,7 +280,7 @@
                   </p>
                   <p><em>Age:</em> 6 weeks</p>
                   <div class="text-end">
-                    <a href="#" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -305,7 +308,7 @@
                   </p>
                   <p><em>Age:</em> 5 weeks</p>
                   <div class="text-end">
-                    <a href="#" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -315,11 +318,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <hr class="m-2 p-1" />
 
     <!-- Our Small Dogs -->
-    <section id="smaller-dogs" class="container justify-content-center">
+    <div id="smaller-dogs" class="container justify-content-center">
       <div class="row">
         <div class="col-12">
           <h3
@@ -346,7 +349,7 @@
                 </p>
                 <p><em>Age:</em> 3 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -369,7 +372,7 @@
                 </p>
                 <p><em>Age:</em> 7 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -392,7 +395,7 @@
                 </p>
                 <p><em>Age:</em> 2 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -415,18 +418,18 @@
                 </p>
                 <p><em>Age:</em> 8 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <hr class="m-2 p-1" />
 
     <!-- Larger Dogs -->
-    <section id="larger-dogs" class="container justify-content-center">
+    <div id="larger-dogs" class="container justify-content-center">
       <div class="row">
         <div class="col-12">
           <h3
@@ -454,7 +457,7 @@
                 </p>
                 <p><em>Age:</em> 6 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -477,7 +480,7 @@
                 </p>
                 <p><em>Age:</em> 4 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -499,7 +502,7 @@
                 </p>
                 <p><em>Age:</em> 5 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
@@ -522,13 +525,14 @@
                 </p>
                 <p><em>Age:</em> 8 years old</p>
                 <div class="text-end">
-                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                  <a href="#adoption-process" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </section>
 
     <!-- Success Story Carousel -->
@@ -551,6 +555,16 @@
                   <div class="col-2 col-xl-4"></div>
                 </div>
               </div>
+              <div class="col-1 col-xl-2"></div>
+              <div class="col-10 col-xl-8">
+                <p class="text-center mt-2 lead w-text">
+                  Want to see the joy adoption brings? Browse our success
+                  stories to meet the dogs who found their forever homes—and the
+                  people whose lives changed with them. Real stories, real love,
+                  and your happy ending could be next.
+                </p>
+              </div>
+              <div class="col-1 col-xl-2"></div>
             </div>
           </div>
         </div>
@@ -734,7 +748,7 @@
                 </div>
               </div>
               <div class="col-1 col-xl-2"></div>
-              <div class="col-10 col-xl-18">
+              <div class="col-10 col-xl-8">
                 <p class="text-center mt-2 lead w-text">
                   Adopting a dog has never been easier. With simple online
                   listings, helpful staff, and a quick, caring process, finding
@@ -868,8 +882,10 @@
             <input type="text-area" class="form-control" id="message" />
           </div>
 
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary">Sign in</button>
+          <div class="col-12 text-end">
+            <button type="submit" class="btn custom-button-filled mb-4 shadow">
+              Submit!
+            </button>
           </div>
         </form>
       </div>
@@ -891,7 +907,7 @@
             yourself. Don’t be shy — stop in and say hi!
           </p>
           <div class="col-xl-5">
-            <table class="table">
+            <table class="table bg-table-transparent">
               <thead>
                 <tr>
                   <th scope="col"></th>
