Fix Table in Footer to have White Content and Transparent Background

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
             yourself. Don’t be shy — stop in and say hi!
           </p>
           <div class="col-xl-5">
-            <table class="table bg-table-transparent">
+            <table class="table table-dark border-light custom-table" id="opening-times">
               <thead>
                 <tr>
                   <th scope="col"></th>
