Add Font Awsome Icons to Footer

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
             <div class="row p-3">
               <div class="col-6 col-xl-12">
                 <p>
-                  Address: <br />
+                  <i class="fa-solid fa-location-dot"></i> Address: <br />
                   2 Whatcote Rd<br />
                   Oxhill<br />
                   Warwick <br />
@@ -953,11 +953,11 @@
               <div class="col-6 col-xl-12">
                 <div class="row">
                   <p class="col-12">
-                    Telephone Number: <br />
+                    <i class="fa-solid fa-phone"></i> Telephone Number: <br />
                     0314 159 2654
                   </p>
                   <p class="col-12">
-                    Email Address: <br />
+                    <i class="fa-solid fa-at"></i> Email Address: <br />
                     tailoftwohearts@gmail.com
                   </p>
                 </div>
