--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
               <div class="carousel-indicators">
                 <button
                   type="button"
-                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-target="#carousel-success-stories"
                   data-bs-slide-to="0"
                   class="active"
                   aria-current="true"
@@ -588,13 +588,13 @@
                 ></button>
                 <button
                   type="button"
-                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-target="#carousel-success-stories"
                   data-bs-slide-to="1"
                   aria-label="Slide 2"
                 ></button>
                 <button
                   type="button"
-                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-target="#carousel-success-stories"
                   data-bs-slide-to="2"
                   aria-label="Slide 3"
                 ></button>
@@ -698,7 +698,7 @@
               <button
                 class="carousel-control-prev"
                 type="button"
-                data-bs-target="#carouselExampleIndicators"
+                data-bs-target="#carousel-success-stories"
                 data-bs-slide="prev"
               >
                 <span
@@ -710,7 +710,7 @@
               <button
                 class="carousel-control-next"
                 type="button"
-                data-bs-target="#carouselExampleIndicators"
+                data-bs-target="#carousel-success-stories"
                 data-bs-slide="next"
               >
                 <span
@@ -910,7 +910,7 @@
             <table class="table table-dark border-light custom-table" id="opening-times">
               <thead>
                 <tr>
-                  <th scope="col"></th>
+                  <th scope="col" class="text-center"><i class="fa-regular fa-clock"></i></th>
                   <th scope="col">Mon-Fri</th>
                   <th scope="col">Saturday</th>
                   <th scope="col">Sunday</th>
@@ -918,7 +918,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">Opening Times</th>
+                  <th scope="row" class="text-center">Opening Times</th>
                   <td>9am-5pm</td>
                   <td>8am-8pm</td>
                   <td>CLOSED</td>
