--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             <!-- Carousel Start -->
             <div
               id="carousel-success-stories"
-              class="carousel slide my-3 shadow"
+              class="carousel slide my-3"
             >
               <div class="carousel-indicators">
                 <button
@@ -604,10 +604,10 @@
                   <img
                     src="assets/images/success-story-1.webp"
                     class="d-block w-100 max-height"
-                    alt="A happy woman with a golden retriever dog"
+                    alt="A happy woman with a cross-breed dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
                     style="z-index: 10"
                   >
                     <div class="card">
@@ -615,8 +615,33 @@
                         <figure>
                           <blockquote class="blockquote">
                             <p>
-                              "Adopting Bella was the best decision we’ve ever
-                              made — she fits right into our family. The process
+                              "Adopting Bella was the best decision I’ve ever
+                              made — she fits right into my life. The process
+                              was so easy and transparent, we knew exactly what
+                              to expect at every step."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Sue and Bella
+                            <cite title="Source Title"
+                              >First Time Dog Apoter</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="d-block d-lg-none mt-3 text-center"
+                    style="z-index: 10"
+                  >
+                    <div class="card">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "Adopting Bella was the best decision I’ve ever
+                              made — she fits right into my life. The process
                               was so easy and transparent, we knew exactly what
                               to expect at every step."
                             </p>
@@ -642,7 +667,7 @@
                     class="position-absolute bottom-0 start-50 translate-middle"
                     style="z-index: 10"
                   >
-                    <div class="card">
+                    <div class="card mx-auto" style="max-width: 90%;">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
